--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <!-- TODO: Include Font Awesome file here -->
     <!-- TODO: Include Google Fonts file here -->
+    <title>Welcome to ScriBBler!!</title>
     <link rel="stylesheet" href="styles/index.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -32,7 +33,12 @@
         </signup>
       </div>
       <div id="content">
-        <button class="btn btn-warning">All Posts</button>
+        <button
+          class="btn btn-warning"
+          onclick="window.location.href = 'html/bloglist.html';"
+        >
+          All Posts
+        </button>
 
         <button class="btn btn-warning">Create Posts</button>
       </div>
