--- a/index.html
+++ b/index.html
@@ -167,10 +167,10 @@
     </div>
 
     <div class="modal" tabindex="-1" id="createPostModal">
-      <div class="modal-dialog">
+      <div class="modal-dialog" id="createPostModalDialog">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title">Modal title</h5>
+            <h5 class="modal-title">Pen Your Post</h5>
             <button
               type="button"
               class="btn-close"
@@ -179,18 +179,29 @@
             ></button>
           </div>
           <div class="modal-body">
-            <p>Modal body text goes here.</p>
+            <form >
+              <label for="title">Title:</label><br />
+              <input
+                type="text"
+                id="title"
+                name="title"
+                placeholder="Enter title of your post"
+                style="width: 100%;"
+              /><br />
+              <label for="contents">Contents:</label><br />
+              <input
+                type="text"
+                id="contents"
+                name="contents"
+                placeholder="Enter the contents of your post"
+                style="width: 100%; height: 250px; padding-top: 10px; padding-left: 10px; line-height: 40px;"
+              ></input
+              ><br /> <br>
+              <button type="button" class="btn btn-success" style="text-align: center;">Create</button>
+              
+            </form>
           </div>
-          <div class="modal-footer">
-            <button
-              type="button"
-              class="btn btn-secondary"
-              data-bs-dismiss="modal"
-            >
-              Close
-            </button>
-            <button type="button" class="btn btn-primary">Save changes</button>
-          </div>
+          
         </div>
       </div>
     </div>
