--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div id="content">
         <button
           class="btn btn-warning"
-          onclick="window.location.href = './html/bloglist.html';"
+          onclick="window.location.href = './html/postlist.html';"
         >
           All Posts
         </button>
