--- a/html/postlist.html
+++ b/html/postlist.html
@@ -65,7 +65,7 @@
             <!-- TODO: Include Font Awesome icon for horizontal ellipsis icon here -->
             <i
               class="fa-solid fa-ellipsis"
-              onclick="window.location.href = './post.html';"
+              onclick="window.location.href = './post1.html';"
             ></i>
           </ellipsis>
         </div>
@@ -95,7 +95,7 @@
             <!-- TODO: Include Font Awesome icon for horizontal ellipsis icon here -->
             <i
               class="fa-solid fa-ellipsis"
-              onclick="window.location.href = './post.html';"
+              onclick="window.location.href = './post2.html';"
             ></i>
           </ellipsis>
         </div>
@@ -126,7 +126,7 @@
             <!-- TODO: Include Font Awesome icon for horizontal ellipsis icon here -->
             <i
               class="fa-solid fa-ellipsis"
-              onclick="window.location.href = './post.html';"
+              onclick="window.location.href = './post3.html';"
             ></i>
           </ellipsis>
         </div>
@@ -158,7 +158,7 @@
             <!-- TODO: Include Font Awesome icon for horizontal ellipsis icon here -->
             <i
               class="fa-solid fa-ellipsis"
-              onclick="window.location.href = './post.html';"
+              onclick="window.location.href = './post4.html';"
             ></i>
           </ellipsis>
         </div>
@@ -191,7 +191,7 @@
             <!-- TODO: Include Font Awesome icon for horizontal ellipsis icon here -->
             <i
               class="fa-solid fa-ellipsis"
-              onclick="window.location.href = './post.html';"
+              onclick="window.location.href = './post5.html';"
             ></i>
           </ellipsis>
         </div>
